Adds admin login Adds logo

--- a/adreset2/templates/base.html
+++ b/adreset2/templates/base.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">ADReset2</a>
+                <a href="/" class="navbar-brand"><img src="{{ url_for('static', filename='img/logo.png') }}" /></a>
             </div>
             <!-- Navigation links for toggling -->
             <div id="navbarCollapse" class="collapse navbar-collapse">
