--- a/adreset2/static/css/styles.css
+++ b/adreset2/static/css/styles.css
@@ -1,4 +1,4 @@
-tml,
+html,
 body {
     height:100%;
 }
@@ -23,4 +23,94 @@ nav a:focus {
 
 nav a:hover {
     color: #D0D0D0 !important;
+}
+
+.navbar-brand {
+    padding: 0px !important;
+}
+
+#bottomOuterAlertDiv {
+    position: fixed;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+}
+
+#bottomOuterAlertDiv div.alert {
+    margin: 0 auto 1em auto;
+    max-width: 800px;
+    text-align: center;
+}
+
+/* Login Page CSS */
+#loginRow div.panel-body {
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
+.loginInput {
+    width: 65%;
+    margin: 2em auto auto;
+}
+
+#loginButtons {
+    margin: auto;
+}
+
+#loginButtons input.btn-primary {
+    margin-right: 1.5em;
+}
+/* End of Login Page CSS */
+
+@media(max-width:767px) {
+
+    .navbar-brand > img {
+        margin-top: 10px;
+        margin-left: 0.5em;
+        height: 65%;
+    }
+
+    #bottomOuterAlertDiv div.alert {
+        width: 85%;
+    }
+}
+
+@media(min-width:768px) {
+    .navbar-brand > img {
+        margin-top: 7px;
+        height: 75%;
+    }
+
+    #bottomOuterAlertDiv div.alert {
+        width: 60%;
+    }
+
+    /* Login Page CSS */
+    #loginRow {
+        margin: auto auto 3em;
+        max-width: 90%;
+    }
+
+    #loginButtons {
+        margin-top: 2.5em;
+        margin-bottom: 1em;
+    }
+
+    #loginButtons input {
+        padding: 0.75em 2em;
+    }
+    /* End of Login Page CSS */
+}
+
+@media(min-width:992px) {
+
+}
+
+@media(min-width:1200px) {
+    /* Login Page CSS */
+    #loginRow {
+        width: 75%;
+        margin: auto;
+    }
+    /* End of Login Page CSS */
 }
