Added Connection Settings Page Start of unit tests

--- a/adreset2/templates/base.html
+++ b/adreset2/templates/base.html
@@ -39,7 +39,7 @@
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">Manage <b class="caret"></b></a>
                             <ul role="menu" class="dropdown-menu">
                                 <li><a href="/configs">App Configuration</a></li>
-                                <li><a href="#">Item</a></li>
+                                <li><a href="/ad_configs">Connection Settings</a></li>
                                 <li><a href="#">Item</a></li>
                             </ul>
                         </li>
