Adds additional tests

--- a/adreset2/templates/ad_config.html
+++ b/adreset2/templates/ad_config.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-    <script src="{{ url_for('static', filename='js/ad_configs.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ad_config.js') }}"></script>
 {% endblock %}
 
 {% block content %}
