--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 .btn-link {
-    color: #2C3E50 !important;
+  color: #2c3e50 !important;
 }
 
 .btn-link:hover {
-    color: #1e2b37 !important;
+  color: #1e2b37 !important;
 }
