--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -18,7 +18,7 @@
 .form-header {
   font-size: 110%;
   margin-top: 20px;
-  color: #dfe1e2;
+  color: #fff;
 }
 
 .login-form {
@@ -41,7 +41,6 @@
 }
 
 .login-btn {
-  color: #dfe1e2;
   margin-top: 15px;
   background-color: #00a1f1;
   border: none;
@@ -49,9 +48,4 @@
 
 .login-btn:not([disabled]):hover {
   background-color: #00a1f1be;
-}
-
-.btn-icon {
-  margin-right: 7.5px;
-  color: #dfe1e2 !important;
 }
