--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,13 @@
 .btn-link:hover {
   color: #1e2b37 !important;
 }
+
+.btn-primary {
+  background-color: #2c3e50 !important;
+  border-color: #2c3e50 !important;
+}
+
+.btn-primary:hover {
+  background-color: #395169 !important;
+  border-color: #395169 !important;
+}
