Add a home page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,8 @@
   background-color: #395169 !important;
   border-color: #395169 !important;
 }
+
+.card-header {
+  background-color: #ecf0f1 !important;
+  border-color: #ecf0f1 !important;
+}
