--- a/frontend/src/components/common/Spinner.css
+++ b/frontend/src/components/common/Spinner.css
@@ -1,15 +1,14 @@
 .spinner-container {
   position: absolute;
-  top: 52px;
+  top: 55px;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 55px);
   z-index: 100;
 }
 
 .spinner {
   position: fixed;
-  top: 70px;
-  left: calc(50% - 5.5px);
-  margin: 2.5rem auto 1rem auto;
+  top: 120px;
+  left: calc(50% - 22.5px);
   z-index: 101;
 }
