Add the frontend code to reset a password using secret questions

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,13 @@ body {
   border-color: #395169 !important;
 }
 
+@media (min-width: 992px) {
+  .custom-card {
+    max-width: 750px;
+    margin: auto;
+  }
+}
+
 .card-header {
   background-color: #ecf0f1 !important;
   border-color: #ecf0f1 !important;
